--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 div {
     width: 100%;
     height: 180px;
-    background-image: url("img/pattern.png");
+    background-image: url("css/img/pattern.png");
     background-color:rgb(68, 154, 255);
 
 
