--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,15 @@
 div {
     width: 100%;
     height: 180px;
-    background-image: url("css/img/pattern.png");
+    background-image: url("../img/pattern.png");
     background-color:rgb(68, 154, 255);
-
+    position: relative;
 
 }
 #logo{
+    width: 17%;
+    position: absolute;
+    bottom: 10px;
+    left: 5px;
     
 }
