--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body {
     margim: 0 auto;
 
 }
-div {
+#sfondo {
     width: 100%;
     height: 180px;
     background-image: url("../img/pattern.png");
@@ -34,11 +34,14 @@ table {
 }
 thead {
     background-color: rgb(68, 154, 255);
-
+    color: white;
 }
 td {
     width: 30%;
 }
 .row-color {
     background-color: rgba(68, 154, 255, 0.5);
+}
+#gray {
+    color: gray;
 }
